cmake_minimum_required(VERSION 3.8)
project(smartcar)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclpy REQUIRED)
find_package(std_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(urdf REQUIRED)
find_package(xacro REQUIRED)
find_package(robot_state_publisher REQUIRED)
find_package(gazebo_dev REQUIRED)
find_package(gazebo_ros REQUIRED)
find_package(ackermann_msgs REQUIRED)
find_package(smartcar_msgs REQUIRED)

# Install directories
install(DIRECTORY
  urdf
  launch
  rviz
  maps
  config
  DESTINATION share/${PROJECT_NAME}/
)

# Install documentation
install(FILES
  README.md
  DESTINATION share/${PROJECT_NAME}/
)

# Build Gazebo plugin
add_library(car_gazebo_plugin SHARED
  car_plugin/car_gazebo_plugin.cpp
)

ament_target_dependencies(car_gazebo_plugin
  gazebo_dev
  gazebo_ros
  rclcpp
  geometry_msgs
  nav_msgs
  sensor_msgs
  std_msgs
  tf2_ros
  ackermann_msgs
  smartcar_msgs
)

target_include_directories(car_gazebo_plugin PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/car_plugin>
  $<INSTALL_INTERFACE:include>
)

# Install the plugin library
install(TARGETS car_gazebo_plugin
  DESTINATION lib
)

# Install Python scripts
install(PROGRAMS
  scripts/joint_state_publisher.py
  scripts/joy_twist.py
  scripts/vehicle_interface.py
  scripts/wheel_odom.py
  DESTINATION lib/${PROJECT_NAME}/
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
