<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smartcar</name>
  <version>0.0.0</version>
  <description>SmartCAR ROS2 package for autonomous navigation with Ackermann steering</description>
  <maintainer email="tomoemanuel@gmail.com">emmanuel-tomo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>foxglove_bridge</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_recoveries</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>ackermann_msgs</depend>
  <depend>smartcar_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
