<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smartcar_map</name>
  <version>1.0.0</version>
  <description>Navigation package of smartcar</description>
  <maintainer email="FK.Diallo@student.han.nl">Fathym Diallo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>  
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_core</depend>
  <depend>nav2_common</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>std_srvs</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_behaviors</depend>
  <depend>pluginlib</depend>
  <depend>smartcar_msgs</depend>
  <depend>ackermann_msgs</depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
